fix: fix when hover sroll, spacing user dropdown

--- a/src/course-about/courseAbout.scss
+++ b/src/course-about/courseAbout.scss
@@ -1,20 +1,12 @@
-<<<<<<< HEAD
-.container-about{
-    position: relative;
-
-=======
 
 .container-about{
     position: relative;
     color:  #2C3744 !important ;
->>>>>>> dev
     .about-section{
         position: relative;
         left:5.5%;
         height: 100%;
         width: 729px;
-<<<<<<< HEAD
-=======
         color:  #2C3744  !important;
         h1 {
         
@@ -29,7 +21,6 @@
         h2{
             color:  #2C3744 ;
         }
->>>>>>> dev
         @media only screen and (max-width: 1440px) {
             width: 613px; 
         }     
@@ -44,134 +35,13 @@
     .about-card{
         position: fixed;
         width:  411px ;
-<<<<<<< HEAD
-        height: 511px;
-=======
         min-height: 511px;
->>>>>>> dev
         right: 5.5%;
         border-radius: 4px ;
         top: 114px;
         box-shadow: 0px 2px 10px 0px #0000001A;
         box-shadow: 0px 0px 2px 0px #00000033;
         background-color: #ffff !important;
-<<<<<<< HEAD
-        .about-card-body{
-            padding:24px;
-        }
-
-
-    }
-}
-
-
-.about-card-title{
-    font-size: 16px;
-    line-height: 24px;
-    font-weight: 500;
-    color: #2C3744;
-    padding: 16px 5px 0px;
-}
-.card-text-item{
-    display: flex;
-    gap:16px ;
-    
-    span{
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 21px;
-    }
-}
-
-.bg-title{
-    background-color: #EEF7FF;
-    min-height: 264px;
-    h1 {
-        
-        font-size: 32px;
-        font-weight: 500;
-        line-height: 48px;
-        letter-spacing: 0px;
-        text-align: left;
-
-    }
-    
-}
-
-
-.collapsible-container{
-    border-bottom: 1px solid #D7D7D7; 
-    padding: 24px 0px;
-    .collapsible-trigger {
-        padding: 0px 12px 0px 0px ;
-    }
-    .collapsible-title{
-        font-size: 24px;
-        line-height: 36px;
-        font-weight: 500;
-
-    }
-}
-
-.block-lesson{
-    border: 1px solid #D7D7D7 !important;
-    // padding: 16px 16px 16px 24px ;
-    &:not(:last-child){
-        border-bottom: none !important;
-    }
-    .collapsible-trigger {
-        padding: 16px 16px 16px 24px ;
-    }
-    .collapsible-title{
-        font-size: 16px !important;
-        font-weight: 500;
-        line-height: 24px;
-        letter-spacing: 0px;
-        text-align: left;
-
-    }
-    .collapsible-body{
-        display: flex;
-        flex-direction: column;
-        padding-top: 20px !important;
-        span {
-            padding:16px 16px 10px 16px;
-        }
-    }
-}
-
-.title_fixed{
-    box-shadow: 0px 2px 10px 0px #0000001A;
-     box-shadow: 0px 0px 2px 0px #00000033;
-     background-color: #ffff;
-     z-index: 99;
-    font-size: 18px !important;
-
-
-}
-
-
-.target-course-container{
-    border : 1px solid #D7D7D7;
-    border-radius: 4px;
-    padding:24px;
-
-    .title-target{
-        font-weight: 500;
-        font-size: 24px;
-        line-height: 36px;
-    }
-    
-    .target-course-about{
-        display: flex;
-        margin-left: 10px;
-        ul{
-            font-size: 14px;
-            line-height: 21px;
-            font-weight: 400;
-            list-style: none;
-
-=======
         z-index: 99;
         color: #2C3744 !important;
         .about-card-body{
@@ -332,7 +202,6 @@
             font-weight: 400;
             list-style: none;
     
->>>>>>> dev
         }
         li {
             padding-top: 16px;
@@ -347,147 +216,6 @@
             }
         }
     }
-<<<<<<< HEAD
-
-}
-
-.section-target{
-    border-bottom:  1px solid #D7D7D7;
-    padding-bottom: 24px;
-}
-
-
-
-.collapsible-body{
-    padding-top: 20px !important;
-    ul{
-        font-size: 16px;
-        line-height: 21px;
-        font-weight: 400;
-        list-style: none;
-
-    }
-    li {
-        padding-top: 16px;
-        position: relative;
-        &::before{
-            content: '\2022';
-            position: absolute;
-           
-            font-size: 28px; 
-            border-radius: 50%; 
-            left: -16px;
-        }
-    }
-}
-
-
-
-.slide-card{
-    padding: 0px 0px 16px 0px;
-    border-radius: 4px;
-    border: 1px solid #D7D7D7;
-    width: 227px;
-    height: 325px;
-    @media only screen and (max-width: 1440px) {
-        width: 188px !important; 
-    }     
-
-    .teach-name{
-        padding-top: 10px;
-        font-size: 16px;
-        font-weight: 500;
-        line-height: 24px;
-        
-    }
-    .teacher-position{
-        font-size: 14px;
-        line-height: 21px;
-        font-weight: 500;
-    }
-    
-}
-.teacher-workplace{
-    font-size: 14px;
-    line-height: 21px;
-    font-weight: 400;
-    color :  #576F8A ;
-}
-
-.silde-teacher {
-    min-height: 227px !important;
-}
-
-.swiper-slide{
-    margin-right: 20px !important;
-    width: 227px;
-    @media only screen and (max-width: 1440px) {
-        width: 188px !important; 
-    }     
-
-}
-
-.swiper-btn{
-    &::after{
-        content: none !important;
-    }
-    color: black !important;
-    border-radius: 50%;
-    background-color: #ffff;
-    height: 32px !important;
-    width: 32px !important;
-    margin-right: 10px !important;
-    border: 1px solid #D7D7D7;
-}
-
-.swiper-button-next{
-    right : -10px !important;
-}
-
-.swiper-button-prev{
-    left : -8px !important;
-}
-
-.swiper-button-disabled {
-    display: none !important;
-}
-
-.card-item {
-    padding: 16px 54px 16px 24px;
-    border : 1px solid #D7D7D7 !important;
-    border-radius: 4;
-    height:120px;
-    h3{
-        font-size: 20px;
-        line-height: 30px;
-        font-weight: 500;
-    }
-}
-
-.teacher-tag{
-    padding: 4px 8px 4px 8px;
-    border-radius: 4px;
-    background-color:#EEF7FF ;
-    span{
-        color : #007AE6;
-        font-size: 16px;
-        line-height: 24px;
-        font-weight: 500;
-        @media only screen and (max-width: 400px) {
-            font-size: 11px !important;
-        }  
-       
-    }
-
-    
-}
-
-.bg-loading-img{
-    span{
-        height: 230px;
-    }
-}
-=======
     
     
     
@@ -636,4 +364,3 @@
 }
 
 
->>>>>>> dev
