--- a/src/courseware/course/CourseResponsive.scss
+++ b/src/courseware/course/CourseResponsive.scss
@@ -108,7 +108,6 @@
       }
     }
     .menu-lesson {
-
       transform: translateX(-1rem);
       border-bottom: 0;
       h2 {
@@ -160,7 +159,6 @@
       width: 19.75rem;
     }
     .menu-lesson {
-
       transform: translateX(-1rem);
 
       border-bottom: 0;
@@ -214,12 +212,10 @@
   }
 
   .unit-left-sidebar {
-
     &.left-side {
       width: 19.75rem;
 
       min-width: 19.75rem;
-
     }
 
     @keyframes hide-leftbar {
@@ -258,11 +254,7 @@
       }
     }
     .menu-lesson {
-<<<<<<< HEAD
-      transform: translateX(-3.25rem);
-=======
       transform: translateX(-1rem);
->>>>>>> dev
       border-bottom: 0;
       &.show-leftbar {
         transform: translateX(0);
@@ -315,7 +307,6 @@
   }
 
   .unit-left-sidebar {
-
     &.left-side {
       width: 100% !important;
       z-index: 1000000;
@@ -323,7 +314,6 @@
     }
     .icon-toggle {
       right: 1.5rem !important;
-
     }
 
     @keyframes hide-leftbar {
@@ -354,9 +344,7 @@
       }
     }
     .menu-lesson {
-
       border-bottom: 0;
-
 
       h2 {
         display: none;
@@ -431,12 +419,10 @@
   }
 
   .unit-left-sidebar {
-
     &.left-side {
       width: 100% !important;
       z-index: 1000000;
       padding-top: 0 !important;
-
     }
     .icon-toggle {
       right: 1.5rem !important;
@@ -468,9 +454,7 @@
       }
     }
     .menu-lesson {
-
       border-bottom: 0;
-
 
       h2 {
         display: none;
