--- a/src/courseware/course/course.scss
+++ b/src/courseware/course/course.scss
@@ -81,7 +81,6 @@
 
     transform: translateX(-20.625rem);
     max-height: calc(100% - 6rem);
-    transition: all 0.35s ease;
     position: relative;
     z-index: -100;
 
@@ -92,7 +91,7 @@
       overflow-x: hidden;
 
       z-index: 100;
-      transition: all 0.35s ease;
+      transition: transform 0.35s ease;
       .bg-light {
         width: 19.75rem;
         animation: border-right forwards linear;
